Some minor optimizations